crates/sui-prover/tests/snapshots/uninterpreted/ext_interpreted_wrong_target.fail.move.snap
---
source: crates/sui-prover/tests/integration.rs
expression: output
---
exiting with bytecode transformation errors
error: interpreted target 'foo::bar' must be marked with #[ext(uninterpreted)]
   ┌─ tests/inputs/uninterpreted/ext_interpreted_wrong_target.fail.move:17:1
   │
17 │ ╭ fun foo_spec(): u64 {
18 │ │     let result = foo();
19 │ │     ensures(result == 42);
20 │ │     result
21 │ │ }
   │ ╰─^

