crates/sui-prover/tests/snapshots/uninterpreted/ext_uninterpreted_no_pure.fail.move.snap
---
source: crates/sui-prover/tests/integration.rs
expression: output
---
exiting with bytecode transformation errors
error: #[ext(uninterpreted)] function 'foo::bar' must also be marked with #[ext(pure)]
   ┌─ tests/inputs/uninterpreted/ext_uninterpreted_no_pure.fail.move:6:1
   │
 6 │ ╭ fun bar(): u64 {
 7 │ │     42
 8 │ │ }
   │ ╰─^

