crates/sui-prover/tests/snapshots/uninterpreted/interpreted_wrong_target.fail.move.snap
---
source: crates/sui-prover/tests/integration.rs
assertion_line: 297
expression: output
---
exiting with bytecode transformation errors
error: interpreted target 'foo::bar' must be marked with #[ext(uninterpreted)]
   ┌─ tests/inputs/uninterpreted/interpreted_wrong_target.fail.move:15:1
   │  
15 │ ╭ fun foo_spec(): u64 {
16 │ │     let result = foo();
17 │ │     ensures(result == 42);
18 │ │     result
19 │ │ }
   │ ╰─^
