crates/sui-prover/tests/snapshots/uninterpreted/wrong_target.fail.move.snap
---
source: crates/sui-prover/tests/integration.rs
expression: output
---
exiting with bytecode transformation errors
error: uninterpreted target 'foo::bar' must be marked with #[ext(pure)]
   ┌─ tests/inputs/uninterpreted/wrong_target.fail.move:14:1
   │  
14 │ ╭ fun foo_spec(): u64 {
15 │ │     let result = foo();
16 │ │     ensures(result == 42);
17 │ │     result
18 │ │ }
   │ ╰─^
